test our euclidean function

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -55,10 +55,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.483314773547883"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# define 3 users with rating for 5 movies\n",
+    "u1 = [5,1,2,4,5]\n",
+    "u2 = [1,5,4,2,1]\n",
+    "u3 = [5,2,2,4,4]\n",
+    "\n",
+    "# from this, we see that 1 and 3 have fairly similar taste, while 2 and 1 have totally different tastes. Lets test5 our funtion \n",
+    "euclidean(u1, u2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623730951"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "euclidean(u1, u3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1 and 3 have a smaller euclidean score between them, compared to the score between 1 and 2. \n",
+    "This proves that 1 and 3 have similar taste and the euclidean distance was able to capture the relationship between our users"
+   ]
   }
  ],
  "metadata": {
