test our euclidean function

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -16,7 +16,13 @@
     "### Similarity Measures\n",
     "How can we mathematically quantify how different or similar two items are to each other\n",
     "\n",
-    " - Euclidean distance - the length of the line segment joining two data points plotted on an n-dimensional Cartesian plane **The lower the Euclidean score, the more similar the two points are to each other**"
+    " - Euclidean distance - the length of the line segment joining two data points plotted on an n-dimensional Cartesian plane **The lower the Euclidean score, the more similar the two points are to each other**\n",
+    "\n",
+    "The Euclidean score is mathematically defined as:\n",
+    "\n",
+    "$$\n",
+    "  d(\\mathbf {v1,v2})= \\sqrt{\\sum \\limits_{i=1}^n (q_i-r_i)^2}\n",
+    "$$"
    ]
   },
   {
