add pearson correlation explanation

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -16,7 +16,7 @@
     "### Similarity Measures\n",
     "How can we mathematically quantify how different or similar two items are to each other\n",
     "\n",
-    " - Euclidean distance - the length of the line segment joining two data points plotted on an n-dimensional Cartesian plane **The lower the Euclidean score, the more similar the two points are to each other**\n",
+    " 1. Euclidean distance - the length of the line segment joining two data points plotted on an n-dimensional Cartesian plane **The lower the Euclidean score, the more similar the two points are to each other**\n",
     "\n",
     "The Euclidean score is mathematically defined as:\n",
     "\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "7.483314773547883"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "1.4142135623730951"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,6 +113,45 @@
     "1 and 3 have a smaller euclidean score between them, compared to the score between 1 and 2. \n",
     "This proves that 1 and 3 have similar taste and the euclidean distance was able to capture the relationship between our users"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 2. #### Pearson correlation\n",
+    "\n",
+    "This is a score between -1 and 1, where -1 indicates total negative correlation and 1 indicates total positive correlation. 0 indicates that the two entities are in no way correlated with each other(independent of each other)\n",
+    "\n",
+    "Take for example movie ratings from 2 users Bob and Alice\n",
+    "```\n",
+    " Alice = [1,1,3,2,4]\n",
+    " Bob = [2,2,4,3,5]\n",
+    " ```\n",
+    "Their Eucledean distance would be ``` 2.2360679774997898 ```\n",
+    "\n",
+    "But by just looking you can tell that Bob's rating is always higher by one compared to Alice's ratings. So it is safe to say that they are correlated.\n",
+    "\n",
+    "Consider anothe user, Eve\n",
+    "```\n",
+    "eve = [5,5,3,4,2]\n",
+    "```\n",
+    "We see that eve has a totally different taste from Alice and their euclidean distance, ```6.324555320336759```\n",
+    "\n",
+    "With Pearson correlation, we are able to make predictions on two very different people, as long as we have the rating of one, something euclidean distance can't\n",
+    "\n",
+    "Pearson correlation can be expressed mathematically as follows:\n",
+    "$$\n",
+    "r =\\frac{\\sum\\left(x_{i}-\\bar{x}\\right)\\left(y_{i}-\\bar{y}\\right)}{\\sqrt{\\sum\\left(x_{i}-\\bar{x}\\right)^{2} \\sum\\left(y_{i}-\\bar{y}\\right)^{2}}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
