test pearson correlation

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -148,10 +148,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PearsonRResult(statistic=1.0, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SciPy gives us access to a function that computes the pearson similarity scores\n",
+    "from scipy.stats import pearsonr\n",
+    "Alice = [1,1,3,2,4]\n",
+    "Bob = [2,2,4,3,5]\n",
+    "\n",
+    "pearsonr(Alice, Bob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PearsonRResult(statistic=-1.0, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eve = [5,5,3,4,2]\n",
+    "pearsonr(Alice, eve)"
+   ]
   }
  ],
  "metadata": {
