add cosine similarity explanation

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -191,6 +191,17 @@
     "eve = [5,5,3,4,2]\n",
     "pearsonr(Alice, eve)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. #### Cosine Similarity\n",
+    "We used this extensively while building our [Content-based recommenders](https://github.com/CKawara/Recommendation-engines-with-Python/tree/main/Content-Based-Recommenders).\n",
+    "\n",
+    "It computes the cosine of the angle between two vectors in an n-dimensional space. When the score is 1, the vesctors are exactly similar. -1 in the other hand, denotes that the two vectors are exactly dissimilar to each other"
+   ]
   }
  ],
  "metadata": {
