add k-means explanation

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -202,6 +202,47 @@
     "\n",
     "It computes the cosine of the angle between two vectors in an n-dimensional space. When the score is 1, the vesctors are exactly similar. -1 in the other hand, denotes that the two vectors are exactly dissimilar to each other"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - Different similarity scores are appropriet in different scenarios, in cases where magnitudeis important, the Euclidean distance is important. But in our case, correlation is more important to us, so we will be using Pearson and cosine similarity scores for our engines."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clustering\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A type of unsupervised learning that groups data points into different classes in such a way that data points belong to a particular class are more similar to each other than data points belonging to different classes"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### k-means clustering\n",
+    "It takes in the data points and the number of clusters(k) as input, then it randomly plots k different points on the plane(centroids). it repeats assignment and reassignment of points to the centroids until there's no further change in the set of k centroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
