--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -325,11 +325,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Choosing K\n",
+    "\n",
+    "We already know that choosing a good value of k is vital to the scuccess of our k-means algorithm. There are many methods available to determine a good value of K. We will discuss the **Elbow method** of determining k\n",
+    "\n",
+    "The **Elbow Method** computes the sum of squares(the sum of the distance of each data point to the centroid of the cluster to which it was assigned) for each value of k and chooses the elbow point of the sum^of-squares v/s K plot as the best value for k.\n",
+    "\n",
+    "It is defined as the value of k at which the sum-of-squares value for every subsequent k starts decreasing more slowly.\n",
+    "\n",
+    "Now fortunately, Scikit-learn's implementation of k-means automatically computes the value of sum-of-squares when computing the clusters. "
+   ]
   }
  ],
  "metadata": {
