introduce dimension reduction

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -544,11 +544,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Dimensionality reduction\n",
+    "\n",
+    "Most ML algorithms perfom poorly as the number of dimensions in data increases. Therefore it is always a good idea to reduce the number of features available in the data while retaining the max amount of information possible.\n",
+    "\n",
+    "Two ways you could do this;\n",
+    "\n",
+    " - Feature Selection - Identifying the features with less predictiong power and dropping them.\n",
+    " - Fearure Extraction - Takes in m-dimensional data and transforms it into an n-dimensional output space (usually where m >> n), while retaining most of the information.\n",
+    " To understand this more, we will look at a feature extraction method called **Princial componentg analysis** (PCA)"
+   ]
   }
  ],
  "metadata": {
