--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -558,6 +558,27 @@
     " - Fearure Extraction - Takes in m-dimensional data and transforms it into an n-dimensional output space (usually where m >> n), while retaining most of the information.\n",
     " To understand this more, we will look at a feature extraction method called **Princial componentg analysis** (PCA)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### PCA\n",
+    "\n",
+    "This is an unsupervised feature extraction algo that takes in m-dimensional input to create a set of n (m >> n) linearly uncorrelated variables (called principal components) in such a way that the n dimensions lose as little variance (or information) as possible due to the loss of the (m-n) dimensions.\n",
+    "\n",
+    "It is done in such a way that the first principal component holds the maximum variance (or information). It does so by considering those variables that are highly correlated to each other. Every principal component has more variance than every succeeding component.\n",
+    "\n",
+    "To demo this, we will use an implementation of PCA that scikit-learn gives us and consider a usecase with the iris dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
