--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -784,6 +784,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-2.264542</td>\n",
+       "      <td>0.505704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-2.086426</td>\n",
+       "      <td>-0.655405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-2.367950</td>\n",
+       "      <td>-0.318477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-2.304197</td>\n",
+       "      <td>-0.575368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-2.388777</td>\n",
+       "      <td>0.674767</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        PC1       PC2\n",
+       "0 -2.264542  0.505704\n",
+       "1 -2.086426 -0.655405\n",
+       "2 -2.367950 -0.318477\n",
+       "3 -2.304197 -0.575368\n",
+       "4 -2.388777  0.674767"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now to transform our data into the two-dimensional space\n",
+    "# Import PCA\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "# initialize a PCA object to transform into the 2D Space\n",
+    "pca = PCA(n_components=2)\n",
+    "\n",
+    "# Apply PCA\n",
+    "pca_iris = pca.fit_transform(x)\n",
+    "pca_iris = pd.DataFrame(data = pca_iris, columns=['PC1', 'PC2'])\n",
+    "\n",
+    "pca_iris.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.72770452, 0.23030523])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get information about the ratio of variance contained by each princial component\n",
+    "pca.explained_variance_ratio_"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is evident that the first principal component holds about 72.8% of the information, whereas the second principal component holds about 23.3% (in total, about 95.8% is retained). 4.2% was lost in removing two dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
