--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -936,11 +936,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Linear-discriminant analysis\n",
+    "\n",
+    "This is another dimentionality reduction technique.\n",
+    "\n",
+    "Similar to PCA, it aims to transform m-dimensional data into an n-dimensional output space. The difference is that, while PCA tries to retain the maximum information, LDA aims identify a set of n features that result in the maximum separation of classes. \n",
+    "\n",
+    "Since LDA requires a labeled data in order to determine its components, it is therefore a type of supervised learning.(hey! that's another difference)"
+   ]
   }
  ],
  "metadata": {
