--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -991,7 +991,9 @@
     "lda_iris = pd.concat([lda_iris, y], axis=1)\n",
     "\n",
     "# display the scatterplot\n",
-    "sns.lmplot(x='C1', y='C2', data=lda_iris, hue='class', fit_reg=False)"
+    "sns.lmplot(x='C1', y='C2', data=lda_iris, hue='class', fit_reg=False)\n",
+    "\n",
+    "# T%he results show that the classes are much more separable than in PCA"
    ]
   },
   {
