explain singular value decomposition

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -997,11 +997,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Singular value decomposition\n",
+    "\n",
+    "SVD is a matrix analysis technique that allows us to represent a high-dimentional matrix in a lower dimension. It does this by identifying and removing the less important parts of the matrix and producing an approximation in the desired number of dimensions."
+   ]
   }
  ],
  "metadata": {
