--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -1017,7 +1017,25 @@
     "\n",
     "It can be classified into two:\n",
     " - classification - a classification problem has a discrete set of values as the target variable(example, a like and a dislike)\n",
-    " - regression - a regression problem has a continous value as its target(example, an average rating between one and five)"
+    " - regression - a regression problem has a continous value as its target(example, an average rating between one and five)\n",
+    "\n",
+    "Let's look at some of the most porpular algorithms"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### k-nearest neighbors\n",
+    "\n",
+    "k-NN, in the case of **classification**, assigns a class to a particular data point by a majority vote of its k nearest neighbors. The data point is assigned the class that is most common among its k-nearest neighbors.\n",
+    "\n",
+    "In the case of **regression**, it computes the average value for the target variable on its k-nearest neighbors.\n",
+    "\n",
+    "Unlike most ML algorithms, k-NN is non-parametric and lazy in nature\n",
+    "    - non-parametric - k-NN does not make any underlying assumptions about the distributionof the data. The model structure is determined by the data.\n",
+    "    - lazy - k-NN undergoes virtually no training. it only computes the k-nearest neighbors of a particular point in the prediction phase. This also means that k-NN needs to have access to the training data at all times and can't discard it during prediction."
    ]
   }
  ],
