--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -1037,6 +1037,23 @@
     "    - non-parametric - k-NN does not make any underlying assumptions about the distributionof the data. The model structure is determined by the data.\n",
     "    - lazy - k-NN undergoes virtually no training. it only computes the k-nearest neighbors of a particular point in the prediction phase. This also means that k-NN needs to have access to the training data at all times and can't discard it during prediction."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Support vactor machines\n",
+    "\n",
+    "It takes in an n-dimensional dataset as in put and constructs an (n-1)dimensional hyperplane in such a way that there is maximum separation of classes\n",
+    "\n",
+    "\n",
+    "#### Decision Trees\n",
+    "\n",
+    "Extremely fast and simple tree-based algorithms that branch out on features that result in the largest information gain. Although not very accurate,they are extremely interpretable.\n",
+    "\n",
+    "Decision trees have an element of randomness in their workings nad come up with different conditions in different iterations. The randomness and fast execution make them extremely popular in ensemble models(which we discuss below) \n"
+   ]
   }
  ],
  "metadata": {
