introduce decision trees

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -1052,7 +1052,12 @@
     "\n",
     "Extremely fast and simple tree-based algorithms that branch out on features that result in the largest information gain. Although not very accurate,they are extremely interpretable.\n",
     "\n",
-    "Decision trees have an element of randomness in their workings nad come up with different conditions in different iterations. The randomness and fast execution make them extremely popular in ensemble models(which we discuss below) \n"
+    "Decision trees have an element of randomness in their workings nad come up with different conditions in different iterations. The randomness and fast execution make them extremely popular in ensemble models(which we discuss below) \n",
+    "\n",
+    "\n",
+    "#### Ensembling\n",
+    "\n",
+    "The predictive power of multiple algorithms is much greater than a single algorithm. Decision trees are most common base algo used when building ensembling models\n"
    ]
   }
  ],
