introduce bagging model

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -1057,7 +1057,16 @@
     "\n",
     "#### Ensembling\n",
     "\n",
-    "The predictive power of multiple algorithms is much greater than a single algorithm. Decision trees are most common base algo used when building ensembling models\n"
+    "The predictive power of multiple algorithms is much greater than a single algorithm. Decision trees are most common base algo used when building ensembling models\n",
+    "\n",
+    "##### Bagging and random forests\n",
+    "\n",
+    "Bagging(bootstrap aggregating) averages over a large number of base classificationmodels and averages their results to deliver its final prediction\n",
+    "\n",
+    "Steps involving in building a bagging model:\n",
+    "    - A certain percentage of the data points are sampled. The sampling is done with replacement whic means a data point can appear in multiple iterations\n",
+    "    - A baseline classification model(decision tree typically) is trained on this sampled data.\n",
+    "    - The process id repeated until n number of models are trained. The final prediction delivered by the bagging model is the average of all predictions of all the base models\n"
    ]
   }
  ],
