introduce boosting models

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -1066,7 +1066,14 @@
     "Steps involving in building a bagging model:\n",
     "    - A certain percentage of the data points are sampled. The sampling is done with replacement whic means a data point can appear in multiple iterations\n",
     "    - A baseline classification model(decision tree typically) is trained on this sampled data.\n",
-    "    - The process id repeated until n number of models are trained. The final prediction delivered by the bagging model is the average of all predictions of all the base models\n"
+    "    - The process id repeated until n number of models are trained. The final prediction delivered by the bagging model is the average of all predictions of all the base models\n",
+    "\n",
+    "An improvement on the bagging model is the **random forest model**. In addition to sampling the datapoints, it also forces each baseline model to randomly select a subset of the features(usually a number equal to the square root of the total number of features)\n",
+    "\n",
+    "#### Boosting\n",
+    "The bagging and random forest models train baseline models that are completely independent of eachother. Therefore, they don't learn from the mistakes that each learner has made, and this is where boosting comes into play.\n",
+    "\n",
+    "Boosting models build a baseline model using a subset of samples and features. However, while building the next learners, the boosting model tries to rectify the mistakes that the previous learners made."
    ]
   }
  ],
