Introduce evaluation metrics

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -1156,10 +1156,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Evaluation metrics\n",
+    "Let us look at some of the metrics that will help us mathematically quantify the perfomance of our classifiers, regressors and filters.\n",
+    "\n",
+    "#### Accuracy\n",
+    "This is the ratio of the number of correct predictions to the total number of predictions made by the model.\n",
+    "\n",
+    "#### Root mean square error\n",
+    "RMSE is used to gauge the perfomance of regressors\n",
+    "\n",
+    "#### Binary Classification metrics\n",
+    "Accuracy does not always give us a good estimate of the perfomance model. For example, consider a binary class dataset where 99% of the data belongs to one class, and 1% belongs to another. If a classifier were to always predict the majority class for every data point, it would have 99% accuracy, but this does not neccesarily mean that the classifier is perfoming well.\n",
+    "\n",
+    "Here, we make use of other metrics. But first let us define some terms:\n",
+    " - **True Positive(TP)**. This is when the actual and the predicted classes are both positive.\n",
+    " - **True negative(TN)**. This is when the actual and the predicted classes are both negative.\n",
+    " - **False Positive(FP)**. This is when the actual class is negative but the predicted class is positive\n",
+    " - **False negative(FN)**. This is when the actual class is positive but the predicted class is negative.\n",
+    "\n",
+    "Example: Considera test that tries to determine whethaer a person has cancer. If the test predicts that a person does have cancer, when they actually dont, it is a false positive. On the other hand, if it fails to detect the cancer in a person with cancer, it is a false negative."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
