discuss binary classificatiob metrics

--- a/Data-Mining-Techniques/Data-Mining.ipynb
+++ b/Data-Mining-Techniques/Data-Mining.ipynb
@@ -1182,6 +1182,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Precision\n",
+    "This is the ratio of the number of positive cases that were correct to all the cases that were identified as positive.\n",
+    "\n",
+    "##### Recall\n",
+    "This is the ratio of the number of positive cases that were identified to the app positive cases present in the dataset\n",
+    "\n",
+    "##### F1 score\n",
+    "A metric that conveys the balance between precision and recall, It is the harmonic mean of the precision and recall.\n",
+    "\n",
+    "An F1 score of 1 implies perfect precision and recall, whereas a score of 0 implies precision and recall are not possible"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
