explaining trainin and test data

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -463,6 +463,29 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although the ratings can only take 5 discrete values, will model this as a regression problem.\n",
+    "Consider a case whre the true rstiing given by a user to a movie is 5. A classification model will not distiguish between a predicted rating of 1 and 4, it will treat both as misclassified. However in a regression model, it will penalize the 1 more than the 4 and that is the behaviour we want.\n",
+    "\n",
+    "As we saw in [Data mining techniques](../Data-Mining-Techniques/Data-Mining.ipynb) ,the first step in building a supervised learning model is to construct the test and training sets. The model will learn using the training dataset and it will be tested by the testing dataset."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training and test data\n",
+    "\n",
+    "We will split the dataset such that 75% of a user's ratings is training dataset and 25% is the testiing dataset.\n",
+    "First, let's assume that the user_id field is the target variable(y) and that our rating consists of the predictor variables(x).\n",
+    "We will then pass these two variables into scikit-learn's `train_test_split` function and `stratify` it along y. This will ensure that the propotion of each class is the same in both the training and testing datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
