--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -490,7 +490,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# assign x as the original ratings df and y as the user_id column of ratings\n",
+    "x = ratings.copy()\n",
+    "y = ratings['user_id']\n",
+    "\n",
+    "# split into training and test datasets, stratifies along user_id\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.25, stratify=y, random_state=42)"
+   ]
   }
  ],
  "metadata": {
