--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,6 +499,51 @@
     "\n",
     "# split into training and test datasets, stratifies along user_id\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.25, stratify=y, random_state=42)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evaluation\n",
+    "\n",
+    "We already know from [data mining techniques](../Data-Mining-Techniques/Data-Mining.ipynb) that root mean aquared error(RMSE) is the most commonly used perfomance metric for regressors.\n",
+    "`scikit-learn` already gives us an implementation of the mean sqaured error. So all we have to do is define a function that returns the square root of the value returned by `mean_squared_error`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "import numpy as np\n",
+    "\n",
+    "# function that computes the RSME\n",
+    "def rsme(y_true, y_pred):\n",
+    "    return np.sqrt(mean_squared_error(y_true,y_pred))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All our collaborative filter models will take in a user_id and movie_id as input, and output a floating number between 1 and 5, We therefore define our baseline model in such a way that it returns 3 regardless of user_id and movie_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define baseline model\n",
+    "\n",
+    "def baseline(user_id, movie_id):\n",
+    "    return 3.0"
    ]
   }
  ],
