test baseline model

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,6 +545,61 @@
     "def baseline(user_id, movie_id):\n",
     "    return 3.0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To test the potency of our model, we compute the RSME obtained by that particular model for all user-movie pairs in the test dataset\n",
+    "\n",
+    "def score(cf_model):\n",
+    "    # clonstruct a list of user-movie tuples from the testing dataset\n",
+    "    id_pairs = zip(x_test['user_id'], x_test['movie_id'])\n",
+    "    # predict the rating for every user-movie tuple\n",
+    "    y_pred = np.array([cf_model(user,movie) for (user, movie) in id_pairs])\n",
+    "    # extract the actual ratings given by the users in the test data\n",
+    "    y_true = np.array(x_test['rating'])\n",
+    "    # return the final RSME score\n",
+    "    return rsme(y_true, y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2488234462885457"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compute RSME obtained by the baseline model\n",
+    "score(baseline)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our aim with the rest of the models we will build is to try to obtain ab RMSE that is less than the one obtained by our baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
