inroduce user-based collaborative filtering

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -595,11 +595,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### User-based collaborative filtering\n",
+    "\n",
+    "As we saw in the [intro](../Intro.md), user-based collaborative filters find users similar to a particular user and the recommend products that those users have liked to the first user.\n",
+    "We will implement this idea in code. We will then test their perfomance using the framework we just constructed above.\n",
+    "\n",
+    "We start by building a ratings matrix where each row represents a user, and each column a movie.\n",
+    "Therefore, the ith row and jth column will denote the rating given by user i to movie j\n",
+    "Pandas provides us a useful function, called `pivot_table` to construct the matrix from our ratings df"
+   ]
   }
  ],
  "metadata": {
