build user based using mean rating

--- a/Collaborative-Filtering/Collaborative-Filtering.ipynb
+++ b/Collaborative-Filtering/Collaborative-Filtering.ipynb
@@ -599,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### User-based collaborative filtering\n",
+    "## User-based collaborative filtering\n",
     "\n",
     "As we saw in the [intro](../Intro.md), user-based collaborative filters find users similar to a particular user and the recommend products that those users have liked to the first user.\n",
     "We will implement this idea in code. We will then test their perfomance using the framework we just constructed above.\n",
@@ -841,11 +841,41 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mean\n",
+    "One of the simplest collaborative filters. it simply takes in user_id and movie_id and outputs the mean rating for the movie by all the users who have rated it. The rating of each user is assigned equal weight.\n",
+    "Since some movies are only in the test set, and not in the training test(not in our rating matrix), we will default to a rating of 3 like in the baseline. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  user based collaborative filter using mean rating\n",
+    "def cf_user_mean(user_id, movie_id):\n",
+    "    # check if movie_id exists in r_matrix\n",
+    "    if movie_id in r_matrix:\n",
+    "        # compute the mean of all the rating given to the movie\n",
+    "        mean_rating = r_matrix[movie_id].mean()\n",
+    "    else:\n",
+    "        # default to a 3 if info doesn't exist\n",
+    "        mean_rating = 3.0\n",
+    "    return mean_rating"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
